--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,15 @@
 {
   "name": "hapi-prototype",
   "version": "1.0.0",
-  "homepage": "https://github.com/coding-house-jan2015/hapi-prototype",
+  "homepage": "https://github.com/soyzamudio/animal-shelter",
   "authors": [
-    "Chyld Medford <chyld.medford@gmail.com>"
+    "Jose Zamudio <jose@josezamudio.me>"
   ],
   "license": "MIT",
   "dependencies": {
     "jquery": "~2.1.3",
-    "lodash": "~3.2.0"
+    "lodash": "~3.2.0",
+    "bootstrap": "~3.3.2",
+    "components-font-awesome": "~4.3.0"
   }
 }
